--- a/frontend/packages/react-app/public/index.html
+++ b/frontend/packages/react-app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Qros"
-      content="Manage and fund decentralized urban jobs from multiple participants."
+      content="Your save file for the Queretaro City DAO gamified interactions."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
