--- a/frontend/packages/react-app/public/index.html
+++ b/frontend/packages/react-app/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js%22%3E</script>
+      <script src="https://unpkg.com/moralis/dist/moralis.js%22%3E</script>
+      <script src="./public/abi.js"></script>
     <title>Qros</title>
   </head>
   <body>
